[gd_scene format=3 uid="uid://ns05rq5dkbv7"]

[ext_resource type="Script" uid="uid://bdaelh6l462dy" path="res://Scripts/balanca.gd" id="1_woxq1"]
[ext_resource type="Texture2D" uid="uid://bc4c7x24y50hf" path="res://Assets/balancaBase.png" id="1_yuysf"]
[ext_resource type="Texture2D" uid="uid://duu56t6hli137" path="res://Assets/beam_balanca.png" id="2_woxq1"]
[ext_resource type="Texture2D" uid="uid://bcw5twpyqsypn" path="res://Assets/prato_balanca.png" id="3_2eiwe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yuysf"]
size = Vector2(124, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_woxq1"]
size = Vector2(124, 27)

[node name="Balanca" type="Node2D" unique_id=686441468]
script = ExtResource("1_woxq1")

[node name="Base" type="Sprite2D" parent="." unique_id=808589657]
position = Vector2(0, -131)
texture = ExtResource("1_yuysf")

[node name="Beam" type="Node2D" parent="." unique_id=1373503339]
position = Vector2(0, -231)

[node name="Sprite2D" type="Sprite2D" parent="Beam" unique_id=1416377473]
scale = Vector2(1, 0.6111111)
texture = ExtResource("2_woxq1")

[node name="LeftPlate" type="Node2D" parent="Beam" unique_id=637897498]
position = Vector2(-144, 5)

[node name="Sprite2D" type="Sprite2D" parent="Beam/LeftPlate" unique_id=440291426]
position = Vector2(4.7683716e-07, 68)
scale = Vector2(1.273196, 1.4677418)
texture = ExtResource("3_2eiwe")

[node name="Area2D" type="Area2D" parent="Beam/LeftPlate" unique_id=1801557995]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beam/LeftPlate/Area2D" unique_id=779483863]
position = Vector2(0, 122.5)
shape = SubResource("RectangleShape2D_yuysf")

[node name="RightPlate" type="Node2D" parent="Beam" unique_id=930651168]
position = Vector2(144, 5)

[node name="Sprite2D" type="Sprite2D" parent="Beam/RightPlate" unique_id=1739299890]
position = Vector2(9.536743e-07, 68.000015)
scale = Vector2(1.273196, 1.4677418)
texture = ExtResource("3_2eiwe")

[node name="Area2D" type="Area2D" parent="Beam/RightPlate" unique_id=810615070]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beam/RightPlate/Area2D" unique_id=82548211]
position = Vector2(0, 122.5)
shape = SubResource("RectangleShape2D_woxq1")

[connection signal="area_entered" from="Beam/LeftPlate/Area2D" to="." method="_on_left_area_entered"]
[connection signal="area_exited" from="Beam/LeftPlate/Area2D" to="." method="_on_left_area_exited"]
[connection signal="area_entered" from="Beam/RightPlate/Area2D" to="." method="_on_right_area_entered"]
[connection signal="area_exited" from="Beam/RightPlate/Area2D" to="." method="_on_right_area_exited"]
